Refactor benchmark scripts and update dependencies
- Updated dune file for OCaml tokenizer to use 'ubench' library instead of 'saga.tokenizers'.
- Removed obsolete run_benchmarks.ml file.
- Enhanced run_benchmarks.sh to provide a clearer output and summary of benchmark results for OCaml and Rust tokenizers.
- Updated Rust dependencies in Cargo.lock and Cargo.toml, including downgrading 'tokenizers' and 'criterion' versions for compatibility.
- Refactored benchmark tests in bert.rs to improve structure and readability, including the addition of training benchmarks for small and big datasets.
- Deleted unused lib.rs file and created a new main.rs file for the Rust baseline project.

--- a/saga/bench/ocaml_tokenizer/dune
+++ b/saga/bench/ocaml_tokenizer/dune
@@ -1,4 +1,4 @@
 (executable
  (name bench_tokenizer)
- (libraries saga saga.tokenizers unix str)
- (modules bench_tokenizer))
+ (modules bench_tokenizer)
+ (libraries saga ubench str))
