--- a/saga/bench/dune
+++ b/saga/bench/dune
@@ -1,5 +1,4 @@
-(executable
- (name run_benchmarks)
- (modules run_benchmarks)
- (libraries unix str)
- (flags (:standard -warn-error -A)))
+(library
+ (name saga_bench)
+ (modules)
+ (libraries saga ubench))
