--- a/saga/bench/rust_baseline/Cargo.toml
+++ b/saga/bench/rust_baseline/Cargo.toml
@@ -1,14 +1,11 @@
 [package]
 name = "rust_baseline"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
-anyhow = "1.0.100"
-tokenizers = "0.22.1"
-
-[dev-dependencies]
-criterion = "0.7.0"
+tokenizers = "0.19"
+criterion = { version = "0.5", features = ["html_reports"] }
 
 [[bench]]
 name = "bert"
